--- a/WEB_UI/Areas/Directory/Views/Home/PresentWagonMarking.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/PresentWagonMarking.cshtml
@@ -101,23 +101,24 @@
     <div class="alert" id="edit_condition_alert"></div>
     <form id="form_edit_condition">
         <div class="form-group row" style="margin-bottom:0.5rem">
-            <label for="edit_condition_arrival" class="col-sm-5 col-form-label">@IDSRWTResource.title_wagons_condition:</label>
+            <label for="edit_condition_present" class="col-sm-5 col-form-label">@DirectoryResource.present_wagon_marking_title:</label>
             <div class="col-sm-7">
-                <select class="form-control" id="edit_condition_arrival" name="edit_condition_arrival"></select>
+                <textarea class="form-control" id="edit_condition_present" name="edit_condition_present"></textarea>
                 <div class="invalid-feedback"></div>
             </div>
         </div>
+        <!-- Allow form submission with keyboard without duplicating the dialog button -->
+        <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
+    </form>
+</div>
+
+<div id="close_condition" title="" style="display:none">
+    <div class="alert" id="close_condition_alert"></div>
+    <form id="form_close_condition">
         <div class="form-group row" style="margin-bottom:0.5rem">
-            <label for="edit_condition_type" class="col-sm-5 col-form-label">@IDSRWTResource.title_type_wagons:</label>
-            <div class="col-sm-7">
-                <select class="form-control" id="edit_condition_type" name="edit_condition_type"></select>
-                <div class="invalid-feedback"></div>
-            </div>
-        </div>
-        <div class="form-group row" style="margin-bottom:0.5rem">
-            <label for="edit_condition_date_rem_vag" class="col-sm-5 col-form-label">@IDSRWTResource.title_date_rem_vag:</label>
-            <div class="col-sm-7">
-                <input type="datetime" class="form-control" id="edit_condition_date_rem_vag" name="edit_condition_date_rem_vag">
+            <label for="close_condition_date" class="col-sm-6 col-form-label">@DirectoryResource.title_close_condition_date:</label>
+            <div class="col-sm-6">
+                <input type="datetime" class="form-control" id="close_condition_date" name="close_condition_date">
                 <div class="invalid-feedback"></div>
             </div>
         </div>
