optimise & fix bag present, sending functional

--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -762,7 +762,7 @@
                             <div class="row">
                                 <div class="col-xl-12 text-center">
                                     <div class="container-fluid">
-                                        ОПЕРАЦИЯ "ОТПРАВЛЕНИЯ СОСТАВА НА СТАНЦИЮ УЗ"
+                                        ОПЕРАЦИЯ "ОТПРАВИТЬ СОСТАВ НА УЗ"
                                     </div>
                                 </div>
                             </div>
