--- a/WEB_UI/Areas/Directory/Views/Home/PresentWagonMarking.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/PresentWagonMarking.cshtml
@@ -57,22 +57,22 @@
                         <div class="card-header" id="sostav_info"></div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-xl-6">
+                                <div class="col-xl-4">
                                     <fieldset class="border-primary">
                                         <legend class="text-primary">Предъявленные составы</legend>
                                         <div class="row">
                                             <div class="col-xl-12" style="font-size:1.2rem">
-                                                <table class="compact table table-striped table-hover" id="table-sostav" style="width:100%;"></table>
+                                                <table class="display compact table-striped table-hover" id="table-sostav" style="width:100%;"></table>
                                             </div>
                                         </div>
                                     </fieldset>
                                 </div>
-                                <div class="col-xl-6">
+                                <div class="col-xl-8">
                                     <fieldset class="border-primary">
                                         <legend class="text-primary">Вагоны в составе</legend>
                                         <div class="row">
                                             <div class="col-xl-12">
-                                                <table class="compact table table-striped table-hover" id="table-wagon" style="width:100%;"></table>
+                                                <table class="display compact table-striped table-hover" id="table-wagon" style="width:100%;"></table>
                                             </div>
                                         </div>
                                     </fieldset>
