--- a/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
@@ -233,6 +233,15 @@
                                                 <legend>@IDSRWTResource.title_detention_return</legend>
                                                 <div class="form-row">
                                                     <div class="col-xl-12 mb-1 text-left">
+                                                        <label for="condition_present" id="condition_present_user" class="mb-1">@IDSRWTResource.title_condition_present:</label>
+                                                        <div class="input-group">
+                                                            <textarea class="form-control" id="condition_present" name="condition_present" disabled></textarea>
+                                                            <div class="invalid-feedback"></div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="form-row">
+                                                    <div class="col-xl-12 mb-1 text-left">
                                                         <fieldset class="border-warning">
                                                             <legend>@IDSRWTResource.title_detention</legend>
                                                             <div class="form-row">
