--- a/WEB_UI/Views/Shared/_IDS.cshtml
+++ b/WEB_UI/Views/Shared/_IDS.cshtml
@@ -16,8 +16,6 @@
     @Styles.Render("~/bootstrap/css")
     <!-- Custom Fonts -->
     @Styles.Render("~/font-awesome/css")
-    @*<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>*@
 
     <!-- Plugin CSS -->
     @Styles.Render("~/magnific-popup/css")
@@ -134,34 +132,34 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-amkr sr-icons"></i>
-                        <a href='@Url.Action("", "", new { Area = "" })'><h3>Администрирование</h3></a>
-                        <p class="text-muted">Сервисы для настройки систем, служб и предоставления доступа к Web-сервисам ИДС</p>
+                        <i class="fa fa-4x fa-cogs text-amkr sr-icons"></i>
+                        <a href='@Url.Action("Index", "Home", new { Area = "Admin" })'><h3>Администрирование</h3></a>
+                        <p class="text-muted">Контроль работы и администрирование Web-сайта и сервисов приложений ИДС</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane text-amkr sr-icons"></i>
                         <a href='@Url.Action("", "", new { Area = "" })'><h3>Рассылка</h3></a>
                         <p class="text-muted">Настройка и контроль рассылка электронной почты сервисами ИДС</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-amkr sr-icons"></i>
+                        <i class="fa fa-4x fa-tasks text-amkr sr-icons"></i>
                         <a href='@Url.Action("Index", "Home", new { Area = "Directory" })'><h3>Утилиты</h3></a>
-                        <p class="text-muted">Справочники ИДС и УЗ, сервисы и утилиты</p>
+                        <p class="text-muted">Справочники ИДС и УЗ, сервисы и утилиты ТД</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                @*<div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-amkr sr-icons"></i>
+                        <i class="fa fa-4x fa-cogs text-amkr sr-icons"></i>
                         <a href='@Url.Action("", "", new { Area = "" })'><h3>Контроль систем</h3></a>
                         <p class="text-muted">Диагностика и контроль работы ИДС</p>
                     </div>
-                </div>
+                </div>*@
             </div>
         </div>
         @RenderSection("Services", false)
