--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -951,10 +951,10 @@
                                 <div class="card-header">
                                     Вагоны<br />
                                     <button type="button" class="btn btn-warning btn-sm" id="add-num-car-of-epd" title="Найти вагоны по ЭПД, поиск документа по номеру" data-form="transceiver">
-                                        <i class="fa fa-file-code-o" aria-hidden="true"></i>
+                                        <i class="far fa-file-code" aria-hidden="true"></i>
                                     </button>
                                     <button type="button" class="btn btn-warning btn-sm" id="add-num-car-manual" title="Добавить вагон вручную" data-form="transceiver">
-                                        <i class="fa fa-hand-paper-o" aria-hidden="true"></i>
+                                        <i class="far fa-hand-paper" aria-hidden="true"></i>
                                     </button>
                                 </div>
                                 <div class="card-body text-primary" style="padding: 0.5rem;">
