--- a/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!-- Bootstrap Core CSS -->
+    @Styles.Render("~/font-awesome/css")
     @Styles.Render("~/jquery-ui/css")
     @Styles.Render("~/bootstrap/css")
 
