--- a/WEB_UI/Content/view/directory/home.css
+++ b/WEB_UI/Content/view/directory/home.css
@@ -139,11 +139,18 @@ tr.group:hover {
 }
 
 .exist-amkr {
-    background-color:#deebbc !important;
+    background-color: #ceffce !important;
 }
+
+.exist-amkr-lock {
+    background-color: #e8e8b5 !important;
+}
+
 .not-exist-amkr {
     background-color:#f5cdb0 !important;
 }
+
+
 
 .operator-detali-tables {
     font-size: 12px;
