deverlop search wagon

--- a/WEB_UI/Areas/Directory/Views/Home/SearchWagon.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/SearchWagon.cshtml
@@ -154,8 +154,8 @@
                                 <!-- Текстовый контент -->
                                 <div class="card-body collapse show" id="arrival_wagon">
                                     <div class="row">
-                                        <div class="col-xl-12 operator-detali-tables">
-                                            <table class="display compact hover row-border" id="table_arrival_wagon" style="width:100%;"></table>
+                                        <div class="col-xl-12 operator-detali-tables"> 
+                                            <table class="display compact cell-border row-border hover" id="table_arrival_wagon" style="width:100%;"></table>
                                         </div>
                                     </div>
                                 </div>
