deverlop searsh car

--- a/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap Core CSS -->
+    @Styles.Render("~/font-awesome/css")
     @Styles.Render("~/jquery-ui/css")
     @Styles.Render("~/bootstrap/css")
 
