deverlop search-wagon add option: arival deteli wir

--- a/WEB_UI/Areas/Directory/Views/Home/SearchWagon.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/SearchWagon.cshtml
@@ -151,9 +151,9 @@
                                         <div class="col-xl-12 operator-detali-tables">
                                             <table class="display compact cell-border row-border hover" id="table_arrival_wagon" style="width:100%;"></table>
                                         </div>
-                                        <div class="col-xl-12 operator-detali-tables">
+                                        @*<div class="col-xl-12 operator-detali-tables">
                                             <table class="display compact cell-border row-border hover" id="table_detali_wir" style="width:100%;"></table>
-                                        </div>
+                                        </div>*@
                                     </div>
                                 </div>
                                 <div class="tab-pane fade" id="pills-wir" role="tabpanel" aria-labelledby="pills-wir-tab">
