--- a/WEB_UI/Content/view/directory/home.css
+++ b/WEB_UI/Content/view/directory/home.css
@@ -102,6 +102,18 @@ tr.shown td.details-control {
     background: url('../../../Content/DataTables/media/images/details_close.png') no-repeat center center;
 }
 
+
+.detali-operation {
+    border-left: 6px solid #8ae;
+    border-top: 1px solid #8ae;
+    padding: 10px;
+    font-size: 14px;
+    line-height: 1.4;
+    background-color: #eee;
+    border-radius: 4px;
+    text-align: left;
+}
+
 /**/
 legend {
     display: block;
